--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   <title>Languages</title>  
 </head>
 <body>
+
+<h3>Ruby</h3>
+<p></p>
+
+<h3>Python</h3>
+<p></p>
+
+<h3>C#</h3>
+<p></p>
+
 </body>
 </html>
