Add form question about dominant hand and coffee.

--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
     <h2>Unsure about what programming language to learn? Complete this quiz to determine the best fit language for you.</h2>
     <div class="form">
       <form>
-        <label for="age">How old are you?</label><br>
-        <input name="age" type="number" id="age"><br>
+        <label for="age">How old are you?</label>
+        <input name="age" type="number" id="age">
     
         <p>Do you have a pet?</p>
-        <label for="petyes">yes</label>
+        <label for="pet">yes</label>
         <input id="petyes" name="pet" type="radio"  value="1">
-        <label for="petno">no</label>
+        <label for="pet">no</label>
         <input id="petno" name="pet" type="radio"  value="0">
-      
+        <br>
+        <label for="hand">What is your dominant hand?</label>
+        <select name="hand">
+          <option value="1">Right</option>
+          <option value="2">Left</option>
+          <option value="0">Ambidextrous</option>
+        </select>
 
 
       </form>
