Add background color of form and make dropdown menu shape more rounded.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h2>Unsure about what programming language to learn? Complete this quiz to determine the best fit language for you.</h2>
     <div class="form">
       <form>
-        <p>Have you coded before?</p>
+        <label for="code">Have you coded before?</label>
         <label for="code">yes</label>
         <input id="codeyes" name="code" type="radio"  value="1">
         <label for="code">no</label>
         <input id="codeno" name="code" type="radio"  value="0">
-    
-        <p>Do you have a pet?</p>
+        <br>
+        <label for="code">Do you have a pet?</label>
         <label for="pet">yes</label>
         <input id="petyes" name="pet" type="radio"  value="1">
         <label for="pet">no</label>
@@ -37,7 +37,7 @@
           <option value="2">No</option>
           <option value="0">Sometimes</option>
         </select>
-
+        <br>
         <label for="sleep">What side do you sleep on?</label>
         <select name="sleep">
           <option value="1">Back</option>
@@ -45,17 +45,15 @@
           <option value="0">Front</option>
           <option value="3">I don't sleep</option>
         </select>
-
+        <br>
         <label for="tech">Microsoft or Apple?</label>
         <select name="tech">
           <option value="1">Microsoft</option>
           <option value="2">Apple</option>
           <option value="0">Neither</option>
         </select>
-
-
-
-
+        <br>
+        <input type="submit" value="Submit">
       </form>
     </div>
     <div class="ruby">
