--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label for="code">no</label>
         <input id="codeno" name="code" type="radio"  value="0">
         <br>
-        <label for="code">Do you have a pet?</label>
+        <label for="pet">Do you have a pet?</label>
         <label for="pet">yes</label>
         <input id="petyes" name="pet" type="radio"  value="1">
         <label for="pet">no</label>
@@ -26,24 +26,24 @@
         <br>
         <label for="hand">What is your dominant hand?</label>
         <select name="hand">
-          <option value="1">Right</option>
-          <option value="2">Left</option>
-          <option value="0">Ambidextrous</option>
+          <option value="1" id="right">Right</option>
+          <option value="2" id="left">Left</option>
+          <option value="0" id="both">Ambidextrous</option>
         </select>
         <br>
         <label for="coffee">Do you drink coffee?</label>
         <select name="coffee">
-          <option value="1">Yes</option>
-          <option value="2">No</option>
-          <option value="0">Sometimes</option>
+          <option value="1" id="coffeeyes">Yes</option>
+          <option value="2" id="coffeeno">No</option>
+          <option value="0" id="coffeesometimes">Sometimes</option>
         </select>
         <br>
         <label for="sleep">What side do you sleep on?</label>
         <select name="sleep">
-          <option value="1">Back</option>
-          <option value="2">Side</option>
-          <option value="0">Front</option>
-          <option value="3">I don't sleep</option>
+          <option value="1" id="back">Back</option>
+          <option value="2" id="side">Side</option>
+          <option value="0" id="front">Front</option>
+          <option value="3" id="idontsleep">I don't sleep</option>
         </select>
         <br>
         <label for="tech">Microsoft or Apple?</label>
