Move parseInt functions from business logic to user interface logic.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <br>
         <label for="tech">Microsoft or Apple?</label>
         <select name="tech">
-          <option value="1">Microsoft</option>
-          <option value="2">Apple</option>
-          <option value="0">Neither</option>
+          <option value="1" id="microsoft">Microsoft</option>
+          <option value="2" id="apple">Apple</option>
+          <option value="0" id="neither">Neither</option>
         </select>
         <br>
         <input type="submit" value="Submit">
