Change select syntax for input value. Delete ideas text page.

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
         <input id="petno" name="pet" type="radio"  value="0">
         <br>
         <label for="hand">What is your dominant hand?</label>
-        <select name="hand">
+        <select id ="hand" name="hand">
           <option value="1" id="right">Right</option>
           <option value="2" id="left">Left</option>
           <option value="0" id="both">Ambidextrous</option>
         </select>
         <br>
         <label for="coffee">Do you drink coffee?</label>
-        <select name="coffee">
+        <select id="coffee" name ="coffee" >
           <option value="1" id="coffeeyes">Yes</option>
           <option value="2" id="coffeeno">No</option>
           <option value="0" id="coffeesometimes">Sometimes</option>
         </select>
         <br>
         <label for="sleep">What side do you sleep on?</label>
-        <select name="sleep">
+        <select id="sleep" name="sleep">
           <option value="1" id="back">Back</option>
           <option value="2" id="side">Side</option>
           <option value="0" id="front">Front</option>
@@ -47,7 +47,7 @@
         </select>
         <br>
         <label for="tech">Microsoft or Apple?</label>
-        <select name="tech">
+        <select id="tech" name="tech">
           <option value="1" id="microsoft">Microsoft</option>
           <option value="2" id="apple">Apple</option>
           <option value="0" id="neither">Neither</option>
