Edit for and id value for radio buttons. Change if and else statement value numbers.

--- a/index.html
+++ b/index.html
@@ -12,45 +12,46 @@
     <h2>Unsure about what programming language to learn? Complete this quiz to determine the best fit language for you.</h2>
     <div class="form">
       <form>
-        <label for="code">Have you coded before?</label>
-        <label for="code">yes</label>
+        <label>Have you coded before?</label>
+        <label  for="codeyes">yes</label>
         <input id="codeyes" name="code" type="radio"  value="1">
-        <label for="code">no</label>
+        <label for="codeno">no</label>
         <input id="codeno" name="code" type="radio"  value="0">
         <br>
-        <label for="pet">Do you have a pet?</label>
-        <label for="pet">yes</label>
+        <label>Do you have a pet?</label>
+        <label for="petyes">yes</label>
         <input id="petyes" name="pet" type="radio"  value="1">
-        <label for="pet">no</label>
+        <label for="petno">no</label>
         <input id="petno" name="pet" type="radio"  value="0">
         <br>
         <label for="hand">What is your dominant hand?</label>
         <select id ="hand" name="hand">
-          <option value="1" id="right">Right</option>
-          <option value="2" id="left">Left</option>
-          <option value="0" id="both">Ambidextrous</option>
+          <option value="1">Right</option>
+          <option value="2">Left</option>
+          <option value="0">Ambidextrous</option>
         </select>
         <br>
         <label for="coffee">Do you drink coffee?</label>
         <select id="coffee" name ="coffee" >
-          <option value="1" id="coffeeyes">Yes</option>
-          <option value="2" id="coffeeno">No</option>
-          <option value="0" id="coffeesometimes">Sometimes</option>
+          <option value="1">Yes</option>
+          <option value="2">No</option>
+          <option value="0">Sometimes</option>
         </select>
         <br>
         <label for="sleep">What side do you sleep on?</label>
         <select id="sleep" name="sleep">
-          <option value="1" id="back">Back</option>
-          <option value="2" id="side">Side</option>
-          <option value="0" id="front">Front</option>
-          <option value="3" id="idontsleep">I don't sleep</option>
+          <option value="1">Back</option>
+          <option value="2">Side</option>
+          <option value="0">Front</option>
+          <option value="3">I don't sleep</option>
         </select>
         <br>
         <label for="tech">Microsoft or Apple?</label>
         <select id="tech" name="tech">
-          <option value="1" id="microsoft">Microsoft</option>
-          <option value="2" id="apple">Apple</option>
-          <option value="0" id="neither">Neither</option>
+          <option value="1">Microsoft</option>
+          <option value="2">Apple</option>
+          <option value="0">Neither</option>
+          <option value="3">Both</option>
         </select>
         <br>
         <input type="submit" value="Submit">
