--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Oxygen&display=swap" rel="stylesheet">
   <title>Suggested Language</title>  
 </head>
 <body>
   <div class="container">
-    <h2>Unsure about what programming language to learn? Complete this quiz to determine the best fit language for you.</h2>
+    <h3>Unsure about what programming language to learn? Complete this quiz to determine the best fit language for you.</h3>
     <div class="form">
       <form>
         <label>Have you coded before?</label>
