--- a/index.html
+++ b/index.html
@@ -6,58 +6,62 @@
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Oxygen&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap" rel="stylesheet">
   <title>Suggested Language</title>  
 </head>
 <body>
   <div class="container">
-    <h3>Unsure about what programming language to learn? Complete this quiz to determine the best fit language for you.</h3>
+    <div class="header">
+      <p>Unsure about what programming language to learn? Complete this quiz to determine the best fit language for you.</p>
+    </div>
     <div class="form">
-      <form>
-        <label>Have you coded before?</label>
-        <label  for="codeyes">yes</label>
-        <input id="codeyes" name="code" type="radio"  value="1">
-        <label for="codeno">no</label>
-        <input id="codeno" name="code" type="radio"  value="0">
-        <br>
-        <label>Do you have a pet?</label>
-        <label for="petyes">yes</label>
-        <input id="petyes" name="pet" type="radio"  value="1">
-        <label for="petno">no</label>
-        <input id="petno" name="pet" type="radio"  value="0">
-        <br>
-        <label for="hand">What is your dominant hand?</label>
-        <select id ="hand" name="hand">
-          <option value="1">Right</option>
-          <option value="2">Left</option>
-          <option value="0">Ambidextrous</option>
-        </select>
-        <br>
-        <label for="coffee">Do you drink coffee?</label>
-        <select id="coffee" name ="coffee" >
-          <option value="1">Yes</option>
-          <option value="2">No</option>
-          <option value="0">Sometimes</option>
-        </select>
-        <br>
-        <label for="sleep">What side do you sleep on?</label>
-        <select id="sleep" name="sleep">
-          <option value="1">Back</option>
-          <option value="2">Side</option>
-          <option value="0">Front</option>
-          <option value="3">I don't sleep</option>
-        </select>
-        <br>
-        <label for="tech">Microsoft or Apple?</label>
-        <select id="tech" name="tech">
-          <option value="1">Microsoft</option>
-          <option value="2">Apple</option>
-          <option value="0">Neither</option>
-          <option value="3">Both</option>
-        </select>
-        <br>
-        <input type="submit" value="Submit">
-      </form>
+        <div class="box">
+        <form>
+          <label>Have you coded before?</label>
+          <label for="codeyes">yes</label>
+          <input id="codeyes" name="code" type="radio"  value="1" checked="checked"> 
+          <label for="codeno">no</label>
+          <input id="codeno" name="code" type="radio"  value="0">
+          <br>
+          <label>Do you have a pet?</label>
+          <label for="petyes">yes</label>
+          <input id="petyes" name="pet" type="radio"  value="1" checked="checked">
+          <label for="petno">no</label>
+          <input id="petno" name="pet" type="radio"  value="0">
+          <br>
+          <label for="hand">What is your dominant hand?</label>
+          <select id ="hand" name="hand">
+            <option value="1">Right</option>
+            <option value="2">Left</option>
+            <option value="0">Ambidextrous</option>
+          </select>
+          <br>
+          <label for="coffee">Do you drink coffee?</label>
+          <select id="coffee" name ="coffee" >
+            <option value="1">Yes</option>
+            <option value="2">No</option>
+            <option value="0">Sometimes</option>
+          </select>
+          <br>
+          <label for="sleep">What side do you sleep on?</label>
+          <select id="sleep" name="sleep">
+            <option value="1">Back</option>
+            <option value="2">Side</option>
+            <option value="0">Front</option>
+            <option value="3">I don't sleep</option>
+          </select>
+          <br>
+          <label for="tech">Microsoft or Apple?</label>
+          <select id="tech" name="tech">
+            <option value="1">Microsoft</option>
+            <option value="2">Apple</option>
+            <option value="0">Neither</option>
+            <option value="3">Both</option>
+          </select>
+          <br>
+          <input type="submit" value="Submit" id="submit">
+        </form>
+      </div>
     </div>
     <div class="ruby">
       <h3>Ruby</h3>
